# AI-PDF-Reader-with-Smart-Notes-and-Artifact-Selection

./: AGENTS.md  Cargo.toml  LICENSE  README.md  ai_layer.py  ai_workers.py  main.py  notes_panel.py  rag.py  requirements.txt  storage.py
src/: main.rs
src/engine/: document.rs  mod.rs  renderer.rs
