[package]
name = "ai-pdf"
version = "0.1.0"
edition = "2021"

[dependencies]
pdfium-render = "0.9"
pdfium-auto = "0.3"
lopdf = "0.39"
iced = { version = "0.13", features = ["wgpu", "image", "tokio"] }
tokio = { version = "1", features = ["rt"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
rfd = "0.15"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
